# CRumina

./: .gitignore  .gitmodules  .pnp.cjs  COMPLETE_OPTIMIZATION_SUMMARY.md  Cargo.toml  LSR_COMPLIANCE_REPORT.md  PARALLEL_POWER.md  README.md  VERIFICATION.md  VM_OPTIMIZATION_ANALYSIS.md  demo_parallel_performance.sh  package.json  test.js  test_explicit_conversion.lm
.git-pr/: pr.ini
.github/workflows/: build.yml
LSR/: README.md  fs.md
LSR/extra_modules/: buffer.md  env.md  fs.md  path.md  process.md  time.md
Old/: Cargo.toml  rolldown.config.js  tsconfig.json
Old/src/: interpreter.rs  optimizer.rs  parser.rs  value.rs  value_ops.rs
Old/tests/: fraction_decimal_conversion_test.rs  mixed_type_ops_test.rs  module_member_test.rs  null_member_assignment_test.rs  rumina_fs_buffer_test.rs  rumina_path_env_time_test.rs  rumina_stream_test.rs  (+1 more)
cxx/: cxx.list.txt  include  src
cxx/list/: list-si
rmpack/: Cargo.toml
rmvm/: Cargo.toml
rmvm/src/: lib.rs  main.rs
rumina-lib/: Cargo.toml
ruminac/: Cargo.toml
scripts/: sync-wasm-bindings.js
src/: ast.rs  bytecode_optimizer.rs  compiler.rs  error.rs  index.ts  interpreter.rs  lexer.rs  lib.rs  main.rs  optimizer.rs  parser.rs  token.rs  value.rs  value_ops.rs  vm.rs  vm_ops.rs  wasm.rs
tests/: decimal_precision_test.rs  fraction_decimal_conversion_test.rs  lamina_compatibility_test.rs  lsr_alignment_test.rs  math_tests.rs  module_member_test.rs  rumina_fs_buffer_test.rs  rumina_fs_path_extended_test.rs  rumina_path_env_time_test.rs  rumina_stream_test.rs  string_comparison_test.rs  struct_comparison_test.rs
(+153 files in other folders)
