[package]
name = "rmvm"
version.workspace = true
edition.workspace = true
description = "Rumina VM - executes .rmc bytecode files"
license.workspace = true

[[bin]]
name = "rmvm"
path = "src/main.rs"

[dependencies]
rumina = { path = "../rumina-lib" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "^3"
