[package]
name = "rumina"
version.workspace = true
edition.workspace = true
description = "Lamina language compatible interpreter written in rust"
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
num.workspace = true
rand.workspace = true
chrono.workspace = true
lazy_static.workspace = true
mathcore.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "^3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "^0.2"
getrandom = { version = "^0.3", features = ["wasm_js"] }

[dev-dependencies]
criterion = "^0.7"
